Issue IMCMS-535: Menu improvements - Keep move button on the right side visible, even when numbering sort is enabled;

--- a/src/main/webapp/imcms/css/menu_editor/imcms-menu_editor.css
+++ b/src/main/webapp/imcms/css/menu_editor/imcms-menu_editor.css
@@ -131,7 +131,7 @@
     display: none;
 }
 
-.imcms-menu-editor .imcms-control--move {
+.imcms-menu-item .imcms-control--move {
     display: none;
 }
 
